# cmd/api/main.go
@@ -12,8 +12,6 @@ import (
 	"github.com/ahmadeko2017/backed-golang-tugas-1/internal/service"
 	"github.com/ahmadeko2017/backed-golang-tugas-1/pkg/database"
 	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
 
 	_ "github.com/ahmadeko2017/backed-golang-tugas-1/docs" // This will be generated by swag init
 )
@@ -35,6 +33,11 @@ func main() {
 	// Setup Handler
 	categoryHandler := handler.NewCategoryHandler(categoryService)
 
+	// Setup Product Dependencies
+	productRepo := repository.NewProductRepository(database.DB)
+	productService := service.NewProductService(productRepo, categoryRepo)
+	productHandler := handler.NewProductHandler(productService)
+
 	// Setup Router
 	r := gin.Default()
 
@@ -52,11 +55,42 @@ func main() {
 		c.File("./web/index.html")
 	})
 
-	// Swagger - Redirect /swagger to /swagger/index.html automatically
+	// Swagger - Custom HTML to hide topbar
 	r.GET("/swagger", func(c *gin.Context) {
 		c.Redirect(http.StatusMovedPermanently, "/swagger/index.html")
 	})
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	r.GET("/swagger/index.html", func(c *gin.Context) {
+		c.Header("Content-Type", "text/html")
+		html := `<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>API Documentation</title>
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@5/swagger-ui.css" />
+  <style>.topbar{display:none!important}</style>
+</head>
+<body>
+  <div id="swagger-ui"></div>
+  <script src="https://unpkg.com/swagger-ui-dist@5/swagger-ui-bundle.js"></script>
+  <script src="https://unpkg.com/swagger-ui-dist@5/swagger-ui-standalone-preset.js"></script>
+  <script>
+    window.onload=()=>{
+      SwaggerUIBundle({
+        url:"/swagger/doc.json",
+        dom_id:'#swagger-ui',
+        deepLinking:true,
+        layout:"BaseLayout",
+        presets:[SwaggerUIBundle.presets.apis,SwaggerUIStandalonePreset]
+      });
+    };
+  </script>
+</body>
+</html>`
+		c.String(http.StatusOK, html)
+	})
+	r.GET("/swagger/doc.json", func(c *gin.Context) {
+		c.File("./docs/swagger.json")
+	})
 
 	// Routes
 	c := r.Group("/categories")
@@ -66,6 +100,15 @@ func main() {
 		c.GET("/:id", categoryHandler.GetCategoryByID)
 		c.PUT("/:id", categoryHandler.UpdateCategory)
 		c.DELETE("/:id", categoryHandler.DeleteCategory)
+	}
+
+	p := r.Group("/products")
+	{
+		p.GET("", productHandler.GetAllProducts)
+		p.POST("", productHandler.CreateProduct)
+		p.GET("/:id", productHandler.GetProductByID)
+		p.PUT("/:id", productHandler.UpdateProduct)
+		p.DELETE("/:id", productHandler.DeleteProduct)
 	}
 
 	// Redirect 404
